--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="col-3">
 
 					<h2>Mobile</h2>	
-						<a href="images/siaconnect-mockup-mobile.png"><img src="images/siaconnect-mockup-mobile.png" alt="mobile" width="270";></a>
+						<img src="https://raw.githubusercontent.com/jthompson429/siaconnect-demo/refs/heads/main/images/siaconnect-mockup-mobile.PNG" alt="mobile" width="270";>
 								
 						<p>Access through your company provisioned mobile device</p>
 					</div>
