--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="col-3">
 					<h2>Desktop</h2>
 						
-						<a href="images/siaconnect-mockup-desktop.png"><img src="images/siaconnect-mockup-desktop.png" alt="desktop" width="400";></a>
+						<img src="https://raw.githubusercontent.com/jthompson429/siaconnect-demo/refs/heads/main/images/siaconnect-mockup-desktop.PNG" alt="desktop" width="400";>
 								
 						<p>Access through your PC</p>
 					</div>
