--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="is-preload">
 <!-- Nav -->
-					<section id="nav" class="nav">
+					<nav id="nav" class="nav">
 						<ul>	
 							<li><a href="#video">Demo</a></li>
 							<li><a href="#access">Ways to Access</a></li>
@@ -44,7 +44,7 @@
 					<h1>Demo Video</h1>
 					<h4>See SIAConnect in action</h4>
 				</header>
-				<video width="80%" controls>
+				<video style="max-width:100%; height:auto;" controls>
 					<source src="assets/videos/2025-04-15 18_37_29.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
@@ -111,7 +111,7 @@
 <div class="col-4 col-12-small">
 								
 										<h2>Manager</h2>
-										<img src="assets/images/sy-manager-avatar-transparent.png" alt="Tech Avataor" width="200";>
+										<img src="assets/images/sy-manager-avatar-transparent.png" alt="Tech Avataor" style="max-width:100%; height:auto;">
 										<h4>Mobile/Desktop</h4>
 										<p>Document Request</br>
 										Reporting</br>
@@ -175,7 +175,7 @@
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
 						<h3>Power Automate</h3>
-						<img src="assets/images/PALogo.webp" width="50%";>
+						<img src="assets/images/PALogo.webp" style="max-width:100%; height:auto;">
 						<p>Automates Jira creation, SharePoint document searches, and KB lookups using secure flows.</p>
 					</div>
 					<div class="col-4 col-12-medium">
@@ -269,7 +269,7 @@
 			<div class="container">
 
 				<p class="copyright">
-					&copy; 2025 Glory Global Solutions (International) Limited - SIAConnect Demo v1. Built for Glory internal use.  <img src="assets/images/glory-logo.png" alt="" width="5%";>
+					&copy; 2025 Glory Global Solutions (International) Limited - SIAConnect Demo v1. Built for Glory internal use.   - v1.1<img src="assets/images/glory-logo.png" alt="" style="max-width:100%; height:auto;">
 				</p>
 			</div>
 		</footer>
