--- a/converter.html
+++ b/converter.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
-<a href="#navPanel" class="menuToggle"><span>Menu</span></a>
 <!-- Nav -->
 <nav id="nav">
-<a href="index.html"><img src="assets/images/siaconnect-logo.png" alt="SIAConnect Logo" style="height:40px; vertical-align:middle; margin-right:10px;"></a>
+
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="search.html">Search Documents</a></li>
@@ -24,6 +23,7 @@
 
     <header id="header" class="alt">
         <div class="inner">
+<img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;">
             <h1>Measurement Converter</h1>
             <p>This section provides more information about measurement converter in SIAConnect.</p>
             <ul class="actions">
