--- a/videos.html
+++ b/videos.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
-<a href="#navPanel" class="menuToggle"><span>Menu</span></a>
+
 <!-- Nav -->
 <nav id="nav">
-<a href="index.html"><img src="assets/images/siaconnect-logo.png" alt="SIAConnect Logo" style="height:40px; vertical-align:middle; margin-right:10px;"></a>
+
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="search.html">Search Documents</a></li>
@@ -25,6 +25,7 @@
     <header id="header" class="alt">
         <div class="inner">
             <h1>Product Videos</h1>
+			<img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;">
             <p>This section provides more information about product videos in SIAConnect.</p>
             <ul class="actions">
                 <li><a href="index.html" class="button">Back to Home</a></li>
