--- a/roadmap.html
+++ b/roadmap.html
@@ -7,23 +7,22 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
-<a href="#navPanel" class="menuToggle"><span>Menu</span></a>
 <!-- Nav -->
 <nav id="nav">
-<a href="index.html"><img src="assets/images/siaconnect-logo.png" alt="SIAConnect Logo" style="height:40px; vertical-align:middle; margin-right:10px;"></a>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="search.html">Search Documents</a></li>
         <li><a href="request.html">Document Request</a></li>
         <li><a href="kb.html">Knowledge Base</a></li>
         <li><a href="converter.html">Measurement Converter</a></li>
-        <li><a href="videos.html">Product Videos</a></li>
+        <li><a href="videos.html">Demo Videos</a></li>
         <li><a href="roadmap.html">Roadmap</a></li>
     </ul>
 </nav>
 
     <header id="header" class="alt">
         <div class="inner">
+		<img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;">
             <h1>Roadmap</h1>
             <p>This section provides more information about roadmap in SIAConnect.</p>
             <ul class="actions">
