--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="col-4 col-12-small">
 
 					<h2>Mobile</h2>	
-						<img src="https://raw.githubusercontent.com/jthompson429/siaconnect-demo/refs/heads/main/images/siaconnect-mockup-mobile.png" alt="mobile" style="max-width=50%; height:auto;">
+						<img src="images/siaconnect-mockup-mobile.PNG" alt="mobile" style="max-width=50%; height:auto;">
 								
 						<p>Access through your company provisioned mobile device</p>
 					</div>
