--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						
 						<img src="images/siaconnect_mockup_desktop_unified.png" alt="desktop">
 								
-						<p>Access through your PC</p>
+						<p>Access SIAConnect through your PC</p>
 					</div>
 			</div></div>
 		</section>		
