--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</section>
 		
-<!-- Features Section -->
+<!-- Access Section -->
 		<section class="siaconnect-access-section">
   <div class="container">
     <h1>Ways to Access SIAConnect</h1>
