--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
 
     <div class="mockup-row">
       <div class="mockup-column">
-        <h2>Mobile</h2>
-        <img src="images/siaconnect_mockup_mobile_unified.png" alt="SIAConnect on Mobile">
-        <p>Access through your company provisioned mobile device</p>
-      </div>
+  <h2>Mobile</h2>
+  <div class="mockup-frame">
+    <img src="images/siaconnect_mockup_mobile_unified.png" alt="SIAConnect on Mobile">
+  </div>
+  <p>Access through your company provisioned mobile device</p>
+</div>
 
       <div class="mockup-column">
         <h2>Desktop</h2>
