--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 					</nav>
 		
 		<!-- Header -->
-		<!-- Header -->
-<header style="position: relative; background-color: #0a0a0a; overflow: hidden; color: white;">
+<section id="header" style="position: relative; background-color: #0a0a0a; overflow: hidden; color: white;">
   <!-- Animated Circuit Grid SVG -->
   <svg class="circuit-grid" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="none">
     <defs>
@@ -80,7 +79,6 @@
       opacity: 0.25;
     }
   </style>
-
   <div class="container" style="position: relative; z-index: 1;">
     <span class="logo">
       <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo">
@@ -91,7 +89,7 @@
       <li><a href="#video" class="button scrolly">Watch Demo</a></li>
     </ul>
   </div>
-</header>
+</section>
 
 		
 		
