--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					</nav>
 		
 		<!-- Header -->
-<section id="header" style="position: relative; background-color: #0a0a0a; overflow: hidden; color: white;">
+<section id="header">
   <!-- Animated Circuit Grid SVG -->
   <svg class="circuit-grid" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="none">
     <defs>
