--- a/index.html
+++ b/index.html
@@ -184,35 +184,35 @@
       </div>
     </div>
 
-    <!-- Use Cases -->
-    <header class="minor" style="margin-top: 80px;">
-      <h2>Built for Every Role</h2>
-    </header>
+<!-- Use Cases -->
+<header class="minor" style="margin-top: 80px;">
+  <h2>Built for Every Role</h2>
+</header>
 
-    <div class="row aln-center">
-      <div class="col-4 col-12-small">
-        <h2>Technicians</h2>
-        <img src="assets/images/al-tech-avatar-transparent.png" alt="Technician Avatar" style="max-width: 60%; height: auto;">
-        <h4>Mobile & Desktop</h4>
-        <p>Manuals and guides<br>Repair steps<br>Unit conversion</p>
-      </div>
-
-      <div class="col-4 col-12-small">
-        <h2>Help Desk</h2>
-        <img src="assets/images/allison-helpdesk-avatar-transparent.png" alt="Help Desk Avatar" style="max-width: 60%; height: auto;">
-        <h4>Desktop</h4>
-        <p>Knowledge base<br>Manuals and guides<br>Document summaries</p>
-      </div>
-
-      <div class="col-4 col-12-small">
-        <h2>Managers</h2>
-        <img src="assets/images/sy-manager-avatar-transparent.png" alt="Manager Avatar" style="max-width: 60%; height: auto;">
-        <h4>Mobile & Desktop</h4>
-        <p>Document requests<br>Reporting<br>Training class management</p>
-      </div>
+<div class="role-highlight">
+  <div class="row aln-center">
+    <div class="col-4 col-12-small">
+      <h2>Technicians</h2>
+      <img src="assets/images/al-tech-avatar-transparent.png" alt="Technician Avatar" style="max-width: 60%; height: auto;">
+      <h4>Mobile & Desktop</h4>
+      <p>Manuals and guides<br>Repair steps<br>Unit conversion</p>
     </div>
 
+    <div class="col-4 col-12-small">
+      <h2>Help Desk</h2>
+      <img src="assets/images/allison-helpdesk-avatar-transparent.png" alt="Help Desk Avatar" style="max-width: 60%; height: auto;">
+      <h4>Desktop</h4>
+      <p>Knowledge base<br>Manuals and guides<br>Document summaries</p>
+    </div>
+
+    <div class="col-4 col-12-small">
+      <h2>Managers</h2>
+      <img src="assets/images/sy-manager-avatar-transparent.png" alt="Manager Avatar" style="max-width: 60%; height: auto;">
+      <h4>Mobile & Desktop</h4>
+      <p>Document requests<br>Reporting<br>Training class management</p>
+    </div>
   </div>
+</div>
 </section>
 
 
