--- a/index.html
+++ b/index.html
@@ -216,43 +216,65 @@
 </section>
 
 
-		<!-- Behind the Scenes Section -->
-		<section id="how" class="main style2">
-			<div class="container">
-				<header class="major">
-					<h1>Behind the Scenes</h1>
-					<h2>Explore how SIAConnect connects your tools and teams.</h2>
-				</header>
-				<div class="row gtr-150">
-					<div class="col-4 col-12-medium">
-						<h3>Power Automate</h3>
-						<img src="assets/images/PALogo.webp" style="max-width:100%; height:auto;">
-						<p>Automates Jira creation, SharePoint document searches, and KB lookups using secure flows.</p>
-					</div>
-					<div class="col-4 col-12-medium">
-					
-						<h2>Dataverse</h2>
-						<p>Stores knowledge articles, request metadata, and user preferences in a scalable low-code database.</p>
-					</div>
-					<div class="col-4 col-12-medium">
-						<h2>Azure AD</h2>
-						<p>Uses Microsoft Entra ID to personalize experiences and restrict access based on user role.</p>
-					</div>
-					<div class="col-4 col-12-medium">
-						<h2>Jira</h2>
-						<p>Creates, updates, and monitors request tickets without ever leaving Microsoft Teams.</p>
-					</div>
-					<div class="col-4 col-12-medium">
-						<h2>SharePoint (SIA)</h2>
-						<p>Searches technical documents and manuals stored in the SIA document library using smart metadata filtering.</p>
-					</div>
-					<div class="col-4 col-12-medium">
-						<h2>Azure OpenAI (Planned)</h2>
-						<p>Intelligent summarization, fallback response logic, and enhanced personalization are in development using OpenAI models.</p>
-					</div>
-				</div>
-			</div>
-		</section>
+		<!-- Behind the Scenes Section (Updated) -->
+<section id="behind-the-scenes" class="main style3 fade-in-section">
+  <div class="container">
+    <header class="major">
+      <h1>Behind the Scenes</h1>
+      <p>Explore how SIAConnect connects your tools and teams.</p>
+    </header>
+
+    <div class="platform-grid">
+      <div class="platform-item">
+        <img src="assets/images/power-automate-icon.png" alt="Power Automate" class="platform-logo">
+        <div class="platform-description">
+          <h2>Power Automate</h2>
+          <p>Automates Jira creation, SharePoint document searches, and KB lookups using secure flows.</p>
+        </div>
+      </div>
+
+      <div class="platform-item">
+        <img src="assets/images/dataverse-icon.png" alt="Dataverse" class="platform-logo">
+        <div class="platform-description">
+          <h2>Dataverse</h2>
+          <p>Stores knowledge articles, request metadata, and user preferences in a scalable low-code database.</p>
+        </div>
+      </div>
+
+      <div class="platform-item">
+        <img src="assets/images/azure-ad-icon.png" alt="Azure AD" class="platform-logo">
+        <div class="platform-description">
+          <h2>Azure AD</h2>
+          <p>Uses Microsoft Entra ID to personalize experiences and restrict access based on user role.</p>
+        </div>
+      </div>
+
+      <div class="platform-item">
+        <img src="assets/images/jira-icon.png" alt="Jira" class="platform-logo">
+        <div class="platform-description">
+          <h2>Jira</h2>
+          <p>Creates, updates, and monitors request tickets without ever leaving Microsoft Teams.</p>
+        </div>
+      </div>
+
+      <div class="platform-item">
+        <img src="assets/images/sharepoint-icon.png" alt="SharePoint" class="platform-logo">
+        <div class="platform-description">
+          <h2>SharePoint (SIA)</h2>
+          <p>Searches technical documents and manuals stored in the SIA document library using smart metadata filtering.</p>
+        </div>
+      </div>
+
+      <div class="platform-item">
+        <img src="assets/images/azure-openai-icon.png" alt="Azure OpenAI" class="platform-logo">
+        <div class="platform-description">
+          <h2>Azure OpenAI (Planned)</h2>
+          <p>Intelligent summarization, fallback response logic, and enhanced personalization are in development using OpenAI models.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 		<!-- Roadmap Section -->
 		<section id="roadmap" class="main style3">
