--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
 
 		<!-- Behind the Scenes Section (Updated) -->
-<section id="behind-the-scenes" class="main style3 fade-in-section">
+<section id="behind-the-scenes" class="future-section" fade-in-section">
   <div class="container">
     <header class="major">
       <h1>Behind the Scenes</h1>
