--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <svg class="siaconnect-svg-bg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none" viewBox="0 0 1600 900">
     <defs>
       <radialGradient id="pulseGradient" cx="50%" cy="50%" r="70%">
-        <stop offset="0%" stop-color="#111987" stop-opacity="0.4">
+        <stop offset="0%" stop-color="#0a0a0a" stop-opacity="0.4">
           <animate attributeName="stop-opacity" values="0.4;0.8;0.4" dur="6s" repeatCount="indefinite" />
         </stop>
         <stop offset="60%" stop-color="#000000" stop-opacity="0.85">
