--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 							<li><a href="#benefits">AI Agent Benefits</a></li>
 						</ul>
 					</nav>
+					<!-- Hero Section -->
+<section id="hero" class="hero-section">
+  <div class="hero-container">
+    <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
+    <h1>Welcome to SIAConnect</h1>
+    <p>Knowledge at the Speed of Work.</p>
+    <a href="#features" class="button special scrolly">Explore</a>
+  </div>
+</section>
 		
 		<!-- Header -->
 <section id="header" class="header">
@@ -337,15 +346,14 @@
 				</div>
 			</div>
 		</section>
-				<!-- Footer -->
-		<footer id="footer">
-			<div class="container">
-
-				<p class="copyright">
-					&copy; 2025 Glory Global Solutions (International) Limited - SIAConnect Demo v1. Built for Glory internal use.   - v1.1<img src="assets/images/glory-logo.png" alt="" style="max-width:100%; height:auto;">
-				</p>
-			</div>
-		</footer>
+				
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="footer-container">
+    <p>&copy; 2025 SIAConnect. Built for the future. Ready right now.</p>
+  </div>
+</footer>
+		
 
 	<script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrollex.min.js"></script>
