--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
   </div>
 </footer>
 		
-
+<!-- Scroll to Top Button -->
+<a href="#hero" class="scroll-top-button" id="scrollTopBtn">&#8679;</a>
 	<script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrollex.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
