--- a/index.html
+++ b/index.html
@@ -291,6 +291,30 @@
 				</div>
 			</div>
 		</section>
+		<!-- SIAConnect Roadmap Timeline -->
+<div class="roadmap">
+  <div class="roadmap-step">
+    <div class="roadmap-circle">1</div>
+    <h3>Launch</h3>
+    <p>Rollout to Training, Help Desk Supervisors, and Senior Agents inside Teams.</p>
+  </div>
+
+  <div class="roadmap-line"></div>
+
+  <div class="roadmap-step">
+    <div class="roadmap-circle">2</div>
+    <h3>Onboard</h3>
+    <p>Welcome guides, in-chat tips, and continuous user engagement strategies.</p>
+  </div>
+
+  <div class="roadmap-line"></div>
+
+  <div class="roadmap-step">
+    <div class="roadmap-circle">3</div>
+    <h3>Evolve</h3>
+    <p>Feature updates, Jira-tracked feedback, and ongoing platform enhancements.</p>
+  </div>
+</div>
 				
 <!-- Footer -->
 <footer class="site-footer">
