--- a/index.html
+++ b/index.html
@@ -230,6 +230,40 @@
   </div>
 </section>
 
+<!-- Deploying SIAConnect Section -->
+<section id="deployment" class="main style3 fade-in-section">
+  <div class="container">
+    <header class="major">
+      <h1>Deploying SIAConnect: The Road Ahead</h1>
+    </header>
+
+    <div class="row gtr-150">
+      <div class="col-12">
+        <h2>Rollout Strategy</h2>
+        <p>
+          Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.<br>
+          Phased expansion based on adoption success, user feedback, and feature readiness.<br>
+          All access managed securely through Microsoft Entra ID groups — no public exposure.
+        </p>
+
+        <h2>Onboarding Experience</h2>
+        <p>
+          A streamlined \"Welcome to SIAConnect\" guide provided at rollout.<br>
+          In-chat tips and conversational guidance available immediately within Teams.<br>
+          Ongoing discovery supported through a \"Tip of the Day\" feature to keep users engaged.
+        </p>
+
+        <h2>Updates and Future Development</h2>
+        <p>
+          Continuous feature improvements based on user feedback.<br>
+          Transparent feature request tracking through Jira.<br>
+          Regular content updates and system enhancements without disrupting user experience.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 		<!-- Roadmap Section -->
 		<section id="roadmap" class="main style3">
 			<div class="container">
