--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 </section>
 
 <!-- Deploying SIAConnect Section -->
-<section id="deployment" class="main style3 fade-in-section">
+<section id="deployment" class="deployment" fade-in-section">
   <div class="container">
     <header class="major">
       <h1>Deploying SIAConnect: The Road Ahead</h1>
