--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 <div class="roadmap">
   <div class="roadmap-step">
     <div class="roadmap-circle">1</div>
+				<h1>Roadmap Timeline</h1>
     <h3>Launch</h3>
     <p>Rollout to Training, Help Desk Supervisors, and Senior Agents inside Teams.</p>
   </div>
@@ -353,7 +354,8 @@
 <!-- Footer -->
 <footer class="site-footer">
   <div class="footer-container">
-    <p>&copy; 2025 SIAConnect. Built for the future. Ready right now.</p>
+    <p>&copy; 2025 Glory Global Solutions</p>
+				<p>SIAConnect — Built for the future. Ready right now.</p>
   </div>
 </footer>
 		<script>
