--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 		<!-- Demo Video Section -->
 		<section id="video" class="main style2 fade-in-section">
 			<div class="container">
-				<header class="major">
+
 					<h1>Demo Video</h1>
-					<h4>See SIAConnect in action</h4>
-				</header>
+					<p>See SIAConnect in action</p>
 				<video style="max-width:100%; height:auto;" controls>
 					<source src="assets/videos/2025-04-15 18_37_29.mp4" type="video/mp4">
 					Your browser does not support the video tag.
@@ -65,7 +64,7 @@
         <stop offset="0%" stop-color="#0a0a0a" stop-opacity="0.4">
           <animate attributeName="stop-opacity" values="0.4;0.8;0.4" dur="6s" repeatCount="indefinite" />
         </stop>
-        <stop offset="60%" stop-color="#000000" stop-opacity="0.85">
+        <stop offset="60%" stop-color="#ffffff" stop-opacity="0.85">
           <animate attributeName="stop-opacity" values="0.85;1;0.85" dur="6s" repeatCount="indefinite" />
         </stop>
         <stop offset="100%" stop-color="#000000" stop-opacity="1" />
@@ -99,9 +98,9 @@
 <!-- SIAConnect In Action Section -->
 <section id="features" class="main style3 fade-in-section">
   <div class="container">
-    <header class="major">
+
       <h1>SIAConnect In Action</h1>
-    </header>
+   
 
     <!-- Features -->
     <div class="row gtr-150">
