--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <stop offset="0%" stop-color="#0a0a0a" stop-opacity="0.4">
           <animate attributeName="stop-opacity" values="0.4;0.8;0.4" dur="6s" repeatCount="indefinite" />
         </stop>
-        <stop offset="60%" stop-color="#ffffff" stop-opacity="0.85">
+        <stop offset="60%" stop-color="#0a0a0a" stop-opacity="0.85">
           <animate attributeName="stop-opacity" values="0.85;1;0.85" dur="6s" repeatCount="indefinite" />
         </stop>
         <stop offset="100%" stop-color="#000000" stop-opacity="1" />
