--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <stop offset="60%" stop-color="#0a0a0a" stop-opacity="0.85">
           <animate attributeName="stop-opacity" values="0.85;1;0.85" dur="6s" repeatCount="indefinite" />
         </stop>
-        <stop offset="100%" stop-color="#000000" stop-opacity="1" />
+        <stop offset="100%" stop-color="#ffffff" stop-opacity="1" />
       </radialGradient>
     </defs>
     <rect width="1600" height="900" fill="url(#pulseGradient)" />
