--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
 
         <h2>Onboarding Experience</h2>
         <p>
-          A streamlined \"Welcome to SIAConnect\" guide provided at rollout.<br>
+          A streamlined "Welcome to SIAConnect" guide provided at rollout.<br>
           In-chat tips and conversational guidance available immediately within Teams.<br>
-          Ongoing discovery supported through a \"Tip of the Day\" feature to keep users engaged.
+          Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
         </p>
 
         <h2>Updates and Future Development</h2>
