--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!-- Nav -->
 					<nav id="nav" class="nav">
 						<ul>	
+							<li><a href="#hero">Home</a></li>
 							<li><a href="#video">Demo</a></li>
 							<li><a href="#access">Ways to Access</a></li>
 							<li><a href="#usecases">Use Cases</a></li>
@@ -44,7 +45,7 @@
 </section>		
 					
 		<!-- Demo Video Section -->
-		<section id="video" class="main style2 fade-in-section">
+		<section id="video" class="main style1 fade-in-section">
 			<div class="container">
 
 					<h1>Demo Video</h1>
@@ -269,6 +270,7 @@
     </div>
   </div>
 </section>
+
 <!-- Roadmap Section -->
 		<section id="roadmap" class="main style3">
 			<div class="container">
@@ -303,7 +305,7 @@
 				
 
 <!-- SIAConnect In Action Section -->
-<section id="features" class="main style3 fade-in-section">
+<section id="features" class="main style1 fade-in-section">
   <div class="container">
 
       <h1>SIAConnect In Action</h1>
