--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
-    <a href="#video" class="button">Explore</a>
+    <a href="#video" class="special button">Explore</a>
   </div>
 </section>
 		
@@ -40,7 +40,7 @@
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge, Ready for You.</h2>
     <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
-    <a href="#video" class="button">See What’s Possible</a>
+    <a href="#video" class="special button">See What’s Possible</a>
   </div>
 </section>		
 					
