--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     color: #ccc;
   }
   .comparison-table th {
-    background-color: #111987;
+    background-color: #0050b6;
     color: white;
     font-weight: bold;
     text-align: center;
