--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge, Ready for You.</h2>
     <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
-    <a href="#video" class="special button">See What’s Possible</a>
+    <a href="#video" class="button">See What’s Possible</a>
   </div>
 </section>		
 					
