--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
-    <a href="#video" class="special button">Explore</a>
+    <a href="#video" class="button">Explore</a>
   </div>
 </section>
 		
 
 <!-- SIAConnect - Future of Knowledge Section -->
-<section class="future-section fade-in-section">
+<section id="future" class="future-section fade-in-section">
   <div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge, Ready for You.</h2>
@@ -58,7 +58,7 @@
 		</section>
 		
 <!-- Access Section -->
-<section class="siaconnect-access-section fade-in-section">
+<section id="access" class="siaconnect-access-section fade-in-section">
   <svg class="siaconnect-svg-bg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none" viewBox="0 0 1600 900">
     <defs>
       <radialGradient id="pulseGradient" cx="50%" cy="50%" r="70%">
@@ -96,7 +96,7 @@
 </section>	
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section class="section">
+<section id="compare" class="section">
   <h2>How SIAConnect Compares</h2>
   <div class="comparison-table">
     <table>
@@ -182,7 +182,7 @@
   }
   .comparison-table th, .comparison-table td {
     padding: 16px;
-    border-bottom: 1px solid #333;
+    border-bottom: 2px solid #494949;
     text-align: left;
     color: #ccc;
   }
