--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <p>Automates Jira creation, SharePoint document searches, and KB lookups using secure flows.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/dataverse-icon.png" alt="Dataverse" class="platform-logo">
         <div class="platform-description">
@@ -236,7 +236,7 @@
           <p>Stores knowledge articles, request metadata, and user preferences in a scalable low-code database.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/azure-ad-icon.png" alt="Azure AD" class="platform-logo">
         <div class="platform-description">
@@ -244,7 +244,7 @@
           <p>Uses Microsoft Entra ID to personalize experiences and restrict access based on user role.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/jira-icon.png" alt="Jira" class="platform-logo">
         <div class="platform-description">
@@ -252,7 +252,7 @@
           <p>Creates, updates, and monitors request tickets without ever leaving Microsoft Teams.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/sharepoint-icon.png" alt="SharePoint" class="platform-logo">
         <div class="platform-description">
@@ -260,7 +260,7 @@
           <p>Searches technical documents and manuals stored in the SIA document library using smart metadata filtering.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/azure-openai-icon.png" alt="Azure OpenAI" class="platform-logo">
         <div class="platform-description">
