--- a/index.html
+++ b/index.html
@@ -274,7 +274,10 @@
 
 <!-- Roadmap Section -->
 		<section id="roadmap" class="main style3">
-			<div class="container">
+			<p style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">
+Here’s how the first rollout and evolution of SIAConnect is planned:
+</p>
+			<div class="roadmap">
 				<header class="major">
 					<h1>Future Features</h1>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
