--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 </section>
 
 <!-- Deploying SIAConnect Section -->
-<section id="deployment" class="deployment" fade-in-section">
+<section id="deployment" class="main style3 fade-in-section">
   <div class="container">
     <header class="major">
       <h1>Deploying SIAConnect: The Road Ahead</h1>
@@ -397,9 +397,9 @@
 
         <h2>Onboarding Experience</h2>
         <p>
-          A streamlined "Welcome to SIAConnect" guide provided at rollout.<br>
+          A streamlined \"Welcome to SIAConnect\" guide provided at rollout.<br>
           In-chat tips and conversational guidance available immediately within Teams.<br>
-          Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
+          Ongoing discovery supported through a \"Tip of the Day\" feature to keep users engaged.
         </p>
 
         <h2>Updates and Future Development</h2>
