--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
-    <a href="#video" class="button">Explore</a>
+    <a href="#section-id" class="button">Explore</a>
   </div>
 </section>
 		
