--- a/index.html
+++ b/index.html
@@ -273,10 +273,9 @@
 </section>
 
 <!-- Roadmap Section -->
-		<section id="roadmap" class="main style3">
-			
-			<div class="roadmap">
-				<header class="major">
+		<section id="roadmap" class="main style3 fade-in-section">
+  <div class="container">
+    <header class="major">
 					<h1>Future Features</h1>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
 				</header>
@@ -307,7 +306,7 @@
 				
 
 <!-- SIAConnect In Action Section -->
-<section id="features" class="main style3 fade-in-section">
+<section id="features" class="main style1 fade-in-section">
   <div class="container">
 
       <h1>SIAConnect In Action</h1>
@@ -350,7 +349,7 @@
 
 <!-- Use Cases -->
 <header class="minor" style="margin-top: 80px;">
-  <h2>Built for Every Role</h2>
+  <h1>Built for Every Role</h1>
 </header>
 
 <div class="role-highlight">
