--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<body class="is-preload">
 		
 <!-- Nav -->
-					<nav id="nav" class="nav">
+
+					<section id="nav" class="nav fade-in-section">
 						<ul>	
 							<li><a href="#hero">Home</a></li>
 							<li><a href="#video">Demo</a></li>
@@ -22,7 +23,7 @@
 							<li><a href="#benefits">AI Agent Benefits</a></li>
 						</ul>
 					</nav>
-					
+					</section>
 					<!-- Hero Section -->
 <section id="hero" class="hero-section fade-in-section">
   <div class="hero-container">
