--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 						</ul>
 					</nav>
 					</section>
+					
 					<!-- Hero Section -->
-<section id="hero" class="hero-section fade-in-section">
+<section id="hero" class="hero-section">
   <div class="hero-container">
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
-    <a href="#section-id" class="button">Explore</a>
+    <a href="#features" class="button special scrolly">Explore</a>
   </div>
 </section>
-		
 
 <!-- SIAConnect - Future of Knowledge Section -->
 <section id="future" class="future-section fade-in-section">
