--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 </section>
 
 <!-- SIAConnect - Future of Knowledge Section -->
-<section id="future" class="future-section fade-in-section">
+<section class="future-section">
   <div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge, Ready for You.</h2>
     <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
-    <a href="#video" class="button">See What’s Possible</a>
+    <a href="#video" class="button special">See What’s Possible</a>
   </div>
-</section>		
+</section>
 					
 		<!-- Demo Video Section -->
 		<section id="video" class="main style1 fade-in-section">
