--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="assets/images/siaconnect-logo-transparent-website.png">
 		<title>SIAConnect - Built for the future. Ready right now</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
