--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
 				
 
 <!-- SIAConnect In Action Section -->
-<section id="features" class="main style1 fade-in-section">
+<section id="features" class="main style2 fade-in-section">
   <div class="container">
-
+<header class="major">
       <h1>SIAConnect In Action</h1>
-   
+   </header>
 
     <!-- Features -->
     <div class="row gtr-150">
