--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 <!-- Nav -->
 
-					<section id="nav" class="nav fade-in-section">
+					<div class="nav">
 						<ul>	
 							<li><a href="#hero">Home</a></li>
 							<li><a href="#video">Demo</a></li>
@@ -24,8 +24,7 @@
 							<li><a href="#benefits">AI Agent Benefits</a></li>
 						</ul>
 					</nav>
-					</section>
-					
+		
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
   <div class="hero-container">
