--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		
+	
 <!-- Nav -->
 
 					<div class="nav">
@@ -22,7 +22,7 @@
 							<li><a href="#how">Behind the Scenes</a></li>
 							<li><a href="#roadmap">Roadmap</a></li>
 							<li><a href="#benefits">AI Agent Benefits</a></li>
-						</ul>
+						</ul></div>
 					</nav>
 		
 					<!-- Hero Section -->
