--- a/index.html
+++ b/index.html
@@ -27,7 +27,44 @@
 		
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
-  <div class="hero-container">
+    <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+  <div class='tri'></div>
+</div>
+
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
