--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
+	<div class="wrap">
     <div class='tri'></div>
   <div class='tri'></div>
   <div class='tri'></div>
