--- a/index.html
+++ b/index.html
@@ -27,44 +27,7 @@
 		
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
-	<div class="wrap">
-    <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-  <div class='tri'></div>
-</div>
+	<div class="hero">
 
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
