--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
-	<div class="hero">
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
 
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
