--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
-<div class="bg"></div>
-<div class="bg bg2"></div>
-<div class="bg bg3"></div>
+<div class="bg-hero"></div>
+<div class="bg-hero bg2-hero"></div>
+<div class="bg-hero bg3-hero"></div>
 
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
