--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body class="is-preload">
 	
 <!-- Nav -->
-
+<section class="nav"
 					<div class="nav">
 						<ul>	
 							<li><a href="#hero">Home</a></li>
@@ -24,7 +24,7 @@
 							<li><a href="#benefits">AI Agent Benefits</a></li>
 						</ul></div>
 					</nav>
-		
+		</section>
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
 <div class="bg-hero"></div>
