--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<body class="is-preload">
 	
 <!-- Nav -->
-<section class="nav"
+<section class="nav">
+	<nav>
 					<div class="nav">
 						<ul>	
 							<li><a href="#hero">Home</a></li>
