--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="icon" type="image/png" sizes="32x32" href="assets/images/siaconnect-logo-transparent-website.png">
 		<title>SIAConnect - Built for the future. Ready right now</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +10,6 @@
 	<body class="is-preload">
 	
 <!-- Nav -->
-	<nav>
 					<div class="nav">
 						<ul>	
 							<li><a href="#hero">Home</a></li>
@@ -23,11 +21,10 @@
 							<li><a href="#roadmap">Roadmap</a></li>
 							<li><a href="#benefits">AI Agent Benefits</a></li>
 						</ul></div>
-					</nav>
 	
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
-<div class="bg-hero"></div>
+<style><div class="bg-hero"></div>
 <div class="bg-hero bg2-hero"></div>
 <div class="bg-hero bg3-hero"></div>
 
@@ -35,7 +32,7 @@
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
     <a href="#features" class="button special scrolly">Explore</a>
-  </div>
+  </div></style>
 </section>
 
 <!-- SIAConnect - Future of Knowledge Section -->
