--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 	
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
+	<div class="hero-container>
 <div class="bg-hero"></div>
 <div class="bg-hero bg2-hero"></div>
 <div class="bg-hero bg3-hero"></div>
-<div class="content">
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
     <a href="#features" class="button special scrolly">Explore</a>
-  </div></div>
+  </div>
 </section>
 
 <!-- SIAConnect - Future of Knowledge Section -->
