--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<body class="is-preload">
 	
 <!-- Nav -->
-					<div class="nav">
+<nav class="nav">
+  <div class="nav">
 						<ul>	
 							<li><a href="#hero">Home</a></li>
 							<li><a href="#video">Demo</a></li>
@@ -20,7 +21,9 @@
 							<li><a href="#how">Behind the Scenes</a></li>
 							<li><a href="#roadmap">Roadmap</a></li>
 							<li><a href="#benefits">AI Agent Benefits</a></li>
-						</ul></div>
+						</ul>
+		</div>
+		</nav>
 	
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
