--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 	<body class="is-preload">
 	
 <!-- Nav -->
-<nav class="nav">
-  <div class="nav">
+					<nav id="nav" class="nav">
 						<ul>	
-							<li><a href="#hero">Home</a></li>
 							<li><a href="#video">Demo</a></li>
 							<li><a href="#access">Ways to Access</a></li>
 							<li><a href="#usecases">Use Cases</a></li>
@@ -22,15 +20,10 @@
 							<li><a href="#roadmap">Roadmap</a></li>
 							<li><a href="#benefits">AI Agent Benefits</a></li>
 						</ul>
-		</div>
-		</nav>
+					</nav>
 	
 					<!-- Hero Section -->
 <section id="hero" class="hero-section">
-	<div class="hero-container>
-<div class="bg-hero"></div>
-<div class="bg-hero bg2-hero"></div>
-<div class="bg-hero bg3-hero"></div>
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
