--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</nav>
 	
 					<!-- Hero Section -->
-<section id="hero" class="hero-section">
+<section id="hero" class="hero-section gradient">
 	
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
