--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 					</nav>
 	
 					<!-- Hero Section -->
-<section id="hero" class="hero-section gradient">
-	
+<section id="hero" class="hero-section">
+	<div class="hero-container">
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
