--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </section>	
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section id="compare" class="section">
+<section class="section">
   <h2>How SIAConnect Compares</h2>
   <div class="comparison-table">
     <table>
@@ -173,7 +173,7 @@
 
 <style>
   .comparison-table table {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
     margin-top: 40px;
     animation: fadeInTable 1.5s ease;
