--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <section class="future-section">
   <div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
-    <h2>The Future of Knowledge, Ready for You.</h2>
+    <h2>The Future of Knowledge</h2>
+	  <h3>Ready for You</h3>
     <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
     <a href="#video" class="button special">See What’s Possible</a>
   </div>
