--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+mo<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>SIAConnect - Built for the future. Ready right now</title>
@@ -33,7 +33,7 @@
 </section>
 
 <!-- SIAConnect - Future of Knowledge Section -->
-<section class="future-section">
+<section class="future-section fade-in-section">
   <div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
@@ -44,10 +44,9 @@
 </section>
 					
 		<!-- Demo Video Section -->
-		<section id="video" class="main style2 fade-in-section">
-			<div class="container">
-
-					<h1>Demo Video</h1>
+		<section id="video" class="demo-section fade-in-section">
+			<div class="demo-container">
+					<h2>Demo Video</h2>
 					<p>See SIAConnect in action</p>
 				<video style="max-width:100%; height:auto;" controls>
 					<source src="assets/videos/2025-04-15 18_37_29.mp4" type="video/mp4">
